--- a/css/layout.css
+++ b/css/layout.css
@@ -4,7 +4,8 @@ html, body {
 }
 
 body {
-	margin: 0;
+	margin: 0 auto;
 	background: black;
 	font-family: Helvetica, sans-serif;
+	text-align: center;
 }
