--- a/css/item.css
+++ b/css/item.css
@@ -1,18 +1,18 @@
 .item {
   	display: inline-block;
+  	margin: 10px;
 }
 
 .item a {
 	display: block;
-	margin: 10px;
 	position: relative;
-	text-decoration: none;
 }
 
 .item img {
 	height: 160px;
 	width: 160px;
 	opacity: 0;
+	box-shadow: 0 0 10px #000;
 	transition-property: opacity;
 	transition-duration: 0.5s;
 	transition-timing-function: ease-in;
@@ -27,11 +27,10 @@
 
 .item .title {
 	position: absolute;
-	background: black;
-	color: white;
 	bottom: 0;
 	left: 0;
 	width: 100%;
+	max-height: 150px;
 	font-size: 13px;
 	line-height: 15px;
 	overflow: hidden;
@@ -39,7 +38,8 @@
 	padding: 5px;
 	box-sizing: border-box;
 	display: none;
-	max-height: 150px;
+	background: #222;
+	text-shadow: 0 1px 1px black;
 }
 
 .item a:hover .title,
