--- a/css/layout.css
+++ b/css/layout.css
@@ -5,7 +5,13 @@ html, body {
 
 body {
 	margin: 0 auto;
-	background: black;
+	background: #4D4D4D;
+	color: #e6e6e6;
 	font-family: Helvetica, sans-serif;
 	text-align: center;
+}
+
+a {
+	text-decoration: none;
+	color: inherit;
 }
