--- a/css/viewer.css
+++ b/css/viewer.css
@@ -15,27 +15,26 @@
 	width: 100%;
 	background: rgba(0, 0, 0, 0.8);
 	display: none;
-	text-align: center;
+	text-align: left;
 	overflow-y: scroll;
 	cursor: crosshair;
 }
 
-#viewer a {
+#viewer .title {
 	display: block;
-	color: white;
-	text-align: center;
-	padding: 10px;
-	width: 50%;
-	text-decoration: none;
-	margin: auto;
+	text-align: left;
+	margin: 10px 30px 10px;
+	padding: 10px 0;
 	max-width: 90%;
+	font-size: 120%;
+	color: #ddd;
 }
 
 #viewer img {
 	display: block;
-	max-width: 90%;
+	max-width: 600px;
 	height: auto;
 	width: auto;
-	margin: 0 auto 20px;
-	border: 2px solid #ddd;
+	margin: 0 30px 20px;
+	box-shadow: 0 0 10px black;
 }
