--- a/css/thin.css
+++ b/css/thin.css
@@ -19,6 +19,7 @@
 	max-height: auto;
 	padding: 5px 5px;
 	display: block;
+	border-top: 1px solid #555;
 	border-bottom: 1px solid #555;
 	color: black;
 	text-shadow: 0 1px 1px rgb(230, 230, 230);
